# edc-federated-catalog-client

./: Cargo.toml  README.md
examples/: client.rs
src/: lib.rs  models.rs
src/models/: dataset.rs  federated_catalog_offer.rs  federated_catalog_participant.rs  federated_catalog_participant_create_form.rs  participant_id.rs  policy.rs  service.rs
