[package]
name = "edc-federated-catalog-client"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description= "A Rust client for EDC Federated Catalog"
repository = "https://github.com/dataspace-rs/edc-federated-catalog-client"
keywords = ["dataspace", "http"]
categories = []
readme = "README.md"

[features]
management = []

[dependencies]
reqwest = { version = "0.13", features = ["json"]}
serde = { version = "1", features = ["derive"] }
serde_with = "3.21.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
clap = { version = "4.6.3", features = ["derive", "env"] }
tokio = { version = "1.53.1", features = ["full"] }
